# lazy-badger

./: .gitignore  .python-version  Cargo.toml  LICENSE  README.md
.github/: development.yml
.github/workflows/: development.yml  publish.yml
scripts/ci/: build.sh  check-version.sh  create-release.sh  lint.sh  test.sh
scripts/dev/: ci.sh  create-tag.sh
src/: app.py  cli.rs  constants.py  entrypoint.py  lib.rs  main.rs  parser.py  read.rs  run.rs
