[package]
name = "lazy-badger"
version = "0.1.0"
edition = "2021"
authors = ["Gabriel Conrado"]
description = ["Simple Command Line Interface to call scripts from your working directory"]
readme = "README.md"
repository = "https://github.com/gabaconrado/lazy-badger"
license = "MIT"
keywords = ["productivity"]
categories = ["command-line-utilities"]
include = ["/src", "README.md", "LICENSE"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "1"
